# learning

./: LICENSE.md  README.md  a.out  asm.asm  dw.cpp  fff.txt  meow.cpp
Languages/Assembly/: adv_numbers.asm  bitwise.asm  functions.asm  loops.asm  read_write.asm  storage.asm  strings.asm
Languages/C++/CMake/: CMakeInstructions.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.h  sourceexample.cpp
Languages/Haskell/: README.md  booleans.hs  conditionals.hs  functions.hs  lists.hs  modules.hs  numbers.hs  strings.hs  tuples.hs  variables.hs
Tools/ROS/: CMakeLists.txt  README.md
languages/assembly/: Makefile  arithmetic.asm  basic_asm.asm  conditional.asm  goto.asm  hello_world.asm  mem_alloc.asm  symbols.asm  sys.asm
languages/haskell/: booleans.hs  conditionals.hs  exceptions.hs  functions.hs  glueing_actions.hs  io.hs  lists.hs  maps.hs  modules.hs  monads.hs  numbers.hs  randomness.hs  strings.hs  tuples.hs  types.hs  variables.hs
languages/prolog/: README.md  adv_predicates.pl  basics.pl  conditionals.pl  io.pl  lists.pl  numbers.pl  queries.pl  recursion.pl  rules.pl  unification.pl  variables.pl
languages/r/Basics/: pipes.R  (+4 more)
tools/: README.md
tools/dev_ops/: README.md
tools/embedding/: README.md
tools/mpi/: README.md  advanced_communication.cpp  basic_communication.cpp  basics.cpp
tools/openmp/: README.md  a.out  hello_omp.cpp  parallel_for.cpp  passing_data.cpp
tools/ros/: package.xml
tools/z3/: README.md  advanced_solver.py  basics.py  bit_vectors.py  booleans.py  functions.py  maths_solving.py  validity.py  variables_n_types.py
(+218 files in other folders)
